# neon-shuttle-rs

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 001_init.sql
src/: auth.rs  cron.rs  main.rs  models.rs  routes.rs
templates/: base.html  dashboard.html  index.html  login.html  signup.html
