[package]
name = "neon-shuttle-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "chrono"] }
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
dotenv = "0.15.0"
tera = "1.18.1"
actix-files = "0.6.2"
tokio-cron-scheduler = "0.9.4"